# rs-stellar-core

./: .gitignore  AGENTS.md  Cargo.toml  DOCUMENTATION_ISSUES.md  PARITY_GAPS.md  README.md  SPEC.md
configs/: mainnet.toml
crates/rs-stellar-core/: README.md
crates/rs-stellar-core/src/: config.rs  main.rs  run_cmd.rs
crates/stellar-core-app/: Cargo.toml  README.md
crates/stellar-core-app/src/: app.rs  catchup_cmd.rs  config.rs  lib.rs  logging.rs  run_cmd.rs  survey.rs
crates/stellar-core-bucket/: README.md
crates/stellar-core-bucket/src/: bucket.rs  bucket_list.rs  disk_bucket.rs  entry.rs  lib.rs  manager.rs  merge.rs
crates/stellar-core-crypto/: README.md
crates/stellar-core-crypto/src/: keys.rs  strkey.rs
crates/stellar-core-db/: README.md
crates/stellar-core-db/src/: migrations.rs  schema.rs
crates/stellar-core-db/src/queries/: accounts.rs  history.rs  ledger.rs
crates/stellar-core-herder/: README.md
crates/stellar-core-herder/src/: herder.rs  pending.rs  scp_driver.rs  surge_pricing.rs  tx_queue.rs
crates/stellar-core-history/: README.md
crates/stellar-core-history/src/: archive.rs  catchup.rs  publish.rs  replay.rs
crates/stellar-core-history/tests/: catchup_integration.rs  replay_integration.rs
crates/stellar-core-historywork/tests/: history_work.rs
crates/stellar-core-invariant/: Cargo.toml  README.md
crates/stellar-core-invariant/src/: lib.rs
crates/stellar-core-ledger/: Cargo.toml  README.md
crates/stellar-core-ledger/src/: close.rs  delta.rs  execution.rs  lib.rs  manager.rs
crates/stellar-core-ledger/tests/: transaction_execution.rs
crates/stellar-core-overlay/: README.md
crates/stellar-core-overlay/src/: auth.rs  flood.rs  manager.rs  peer.rs
crates/stellar-core-overlay/tests/: overlay_scp_integration.rs
crates/stellar-core-scp/: README.md
crates/stellar-core-scp/src/: nomination.rs
crates/stellar-core-simulation/src/: lib.rs
crates/stellar-core-simulation/tests/: overlay_sim.rs  overlay_simulation.rs
crates/stellar-core-tx/: README.md
crates/stellar-core-tx/src/: apply.rs  events.rs  frame.rs  lib.rs  result.rs  validation.rs
crates/stellar-core-tx/src/operations/execute/: account_merge.rs  change_trust.rs  inflation.rs  invoke_host_function.rs  liquidity_pool.rs  manage_offer.rs  mod.rs  payment.rs  set_options.rs  trust_flags.rs
crates/stellar-core-tx/src/soroban/: budget.rs  host.rs  mod.rs  storage.rs
crates/stellar-core-tx/src/soroban/protocol/: p24.rs  types.rs
