[workspace]
resolver = "2"
members = [
    "crates/rs-stellar-core",
    "crates/stellar-core-app",
    "crates/stellar-core-common",
    "crates/stellar-core-crypto",
    "crates/stellar-core-db",
    "crates/stellar-core-bucket",
    "crates/stellar-core-history",
    "crates/stellar-core-overlay",
    "crates/stellar-core-scp",
    "crates/stellar-core-herder",
    "crates/stellar-core-ledger",
    "crates/stellar-core-tx",
    "crates/stellar-core-work",
    "crates/stellar-core-historywork",
    "crates/stellar-core-invariant",
    "crates/stellar-core-simulation",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Stellar Contributors"]
license = "Apache-2.0"
repository = "https://github.com/stellar/rs-stellar-core"
rust-version = "1.75"

[workspace.dependencies]
# Stellar official crates
stellar-xdr = { version = "25.0.0", default-features = false, features = ["std", "curr", "serde", "serde_json"] }
stellar-strkey = "0.0.11"
soroban-env-host = "25"
soroban-env-common = "25"

# Workspace crates
stellar-core-common = { path = "crates/stellar-core-common" }
stellar-core-app = { path = "crates/stellar-core-app" }
stellar-core-crypto = { path = "crates/stellar-core-crypto" }
stellar-core-db = { path = "crates/stellar-core-db" }
stellar-core-bucket = { path = "crates/stellar-core-bucket" }
stellar-core-history = { path = "crates/stellar-core-history" }
stellar-core-overlay = { path = "crates/stellar-core-overlay" }
stellar-core-scp = { path = "crates/stellar-core-scp" }
stellar-core-herder = { path = "crates/stellar-core-herder" }
stellar-core-ledger = { path = "crates/stellar-core-ledger" }
stellar-core-tx = { path = "crates/stellar-core-tx" }
stellar-core-work = { path = "crates/stellar-core-work" }
stellar-core-historywork = { path = "crates/stellar-core-historywork" }
stellar-core-invariant = { path = "crates/stellar-core-invariant" }
stellar-core-simulation = { path = "crates/stellar-core-simulation" }

# Crypto - pure Rust implementations
ed25519-dalek = { version = "2", default-features = false, features = ["std", "rand_core", "zeroize"] }
x25519-dalek = { version = "2", default-features = false, features = ["static_secrets", "zeroize"] }
sha2 = { version = "0.10", default-features = false, features = ["std"] }
hmac = "0.12"
crypto_box = { version = "0.9", features = ["seal"] }

# Random number generation - pure Rust
rand = { version = "0.8", default-features = false, features = ["std", "std_rng"] }
rand_chacha = "0.3"
getrandom = { version = "0.2", default-features = false, features = ["std"] }

# Async runtime
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }
futures = "0.3"
async-trait = "0.1"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Encoding - pure Rust
hex = "0.4"
base32 = "0.5"
base64 = "0.22"

# Compression - pure Rust backend
flate2 = { version = "1.0", default-features = false, features = ["rust_backend"] }

# HTTP client - pure Rust TLS
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "gzip", "json"] }

# HTTP server
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }

# Database
rusqlite = { version = "0.31", features = ["bundled", "blob"] }
r2d2 = "0.8"
r2d2_sqlite = "0.24"

# CLI
clap = { version = "4", features = ["derive"] }

# Logging/Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Error handling
thiserror = "1"
anyhow = "1"

# Data structures
indexmap = "2"
dashmap = "6"
im = "15"
bytes = "1"
parking_lot = "0.12"
once_cell = "1"

# Memory safety
zeroize = { version = "1", features = ["derive"] }

# URL handling
url = "2"
fs2 = "0.4"

# Networking
socket2 = "0.5"

# Testing
tempfile = "3"
criterion = "0.5"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
# Faster builds in dev mode
opt-level = 0
debug = true

[profile.test]
opt-level = 1
