[package]
name = "stellar-core-app"
description = "Application orchestration for rs-stellar-core"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lib]
name = "stellar_core_app"
path = "src/lib.rs"

[dependencies]
# Workspace crates
stellar-core-common.workspace = true
stellar-core-crypto.workspace = true
stellar-core-db.workspace = true
stellar-core-bucket.workspace = true
stellar-core-history.workspace = true
stellar-core-historywork.workspace = true
stellar-core-overlay.workspace = true
stellar-core-scp.workspace = true
stellar-core-herder.workspace = true
stellar-core-ledger.workspace = true
stellar-core-tx.workspace = true
stellar-core-work.workspace = true

# Stellar XDR
stellar-xdr.workspace = true

# Async runtime
tokio.workspace = true
futures.workspace = true
async-trait.workspace = true
x25519-dalek.workspace = true
rand.workspace = true

# HTTP server
axum.workspace = true
tower.workspace = true
tower-http.workspace = true

# Configuration
serde.workspace = true
serde_json.workspace = true
toml.workspace = true

# Logging
tracing.workspace = true
tracing-subscriber.workspace = true

# Error handling
anyhow.workspace = true
thiserror.workspace = true

# Encoding
hex.workspace = true
base64.workspace = true
flate2.workspace = true

# URL handling
url.workspace = true
fs2.workspace = true

[dev-dependencies]
tempfile.workspace = true
