[package]
name = "stellar-core-invariant"
description = "Invariant framework for rs-stellar-core"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
stellar-core-common.workspace = true
stellar-core-crypto.workspace = true
stellar-xdr.workspace = true
thiserror.workspace = true
tracing.workspace = true

[dev-dependencies]
