[package]
name = "stellar-core-ledger"
description = "Ledger management for rs-stellar-core"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
stellar-xdr.workspace = true
stellar-core-common.workspace = true
stellar-core-crypto.workspace = true
stellar-core-db.workspace = true
stellar-core-bucket.workspace = true
stellar-core-tx.workspace = true
stellar-core-invariant.workspace = true
soroban-env-host.workspace = true

# Async runtime
tokio.workspace = true
async-trait.workspace = true

# Serialization
serde.workspace = true

# Error handling
thiserror.workspace = true
tracing.workspace = true

# Utilities
parking_lot.workspace = true
sha2.workspace = true

[dev-dependencies]
tempfile.workspace = true
serde_json.workspace = true
hex.workspace = true
